tests/phase_00_lexer_errors/invalid/08_malformed_float_trailing_dot.hulk
// Idealmente el lexer deberia marcar 12. como numero mal formado,
// o al menos dejar evidencia clara de que no es un FLOAT valido unico.
12.;
